# queue-manager

./: README.md  ecosystem.json  update-js.sh
iptables-control-daemon/: Cargo.toml  config.yml  config.yml.example  iptables-control-daemon.service
iptables-control-daemon/src/: fwmanage.rs  main.rs
lobby/: .gitignore  callback.dm  config.dm.example  dreamdaemon-lobby.service  http.dm  lobby.dm  lobby.dme  lobby.dmf  rust_g.dm
queue-backend/: .env.example  .eslintrc.js  .eslintrc.json  .gitignore  .prettierrc.js  package.json  queue.config.json  tsconfig.json  update.sh
queue-backend/prisma/: schema.prisma
queue-backend/src/: app.module.ts  main.ts
queue-backend/src/admin/: admin.controller.ts  admin.module.ts  admin.service.ts
queue-backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
queue-backend/src/byond/: byond.controller.ts  byond.module.ts  byond.service.ts  byondTopic.ts  http2byond.ts
queue-backend/src/common/: queues-state.ts  utils.ts
queue-backend/src/config/: configuration.ts  server-config.ts
queue-backend/src/events/: events.gateway.ts  events.module.ts  events.service.ts
queue-backend/src/ipLink/: ipLink.module.ts  ipLink.service.ts
queue-frontend/: .env.example  .gitignore  global.d.ts  next.config.js  package-lock.json  package.json  postcss.config.js  tsconfig.json  update.sh
queue-frontend/lib/: redis.ts  utils.ts
queue-frontend/pages/: _app.tsx  _document.tsx  admin.tsx  index.tsx
queue-frontend/src/: adminFlag.enum.ts  utils.ts
queue-frontend/styles/: globals.scss
(+66 files in other folders)
