[package]
name = "iptables-control-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.16.1"
tokio = { version = "1.14.0", features = ["macros", "rt", "rt-multi-thread", "signal"] }
config = "0.11.0"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
log = "0.4.14"
simplelog = "0.11.1"
futures-util = "0.3.18"
iptables = "0.4.3"
lazy_static = "1.4.0"
regex = "1.5.4"